# Projetos

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  autosync.py  changelog.md  license  pyproject.toml  requirements.txt
.data/: user_registry.db
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
src/user_registry/: __main__.py  config.py
src/user_registry/domain/: models.py  validators.py
src/user_registry/presentation/: cli.py
src/user_registry/repository/: interfaces.py  schema.sql  sqlite_repo.py
src/user_registry/security/: password.py
src/user_registry/service/: user_service.py
tests/: test_password.py  test_validators.py
