[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "user-registry"
version = "0.1.0"
description = "User registry project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.24.1",
  "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.10",
  "pre-commit>=4.5.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"
